deployment.yaml
apiVersion: app/v1
kind: Deployment
metadata:
    labels:
        app: frontend
    name: frontend
spec:
    replicas: 2
    selector:
        matchLabels:
            app: frontend
    template:
        metadata:
            labels:
                app: frontend
        spec:
            containers:
            - image: echoesact3/django_app_image
              imagePullPolicy: IfNotPresent
              name: frontend
