service.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: frontend
    name: frontend-svc
spec:
    ports:
    - port: 8001
      protocol: TCP
      targetPort: 8001
    selector:
        app: frontend
    type: ClusterIP
